--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,8 @@
     </ul>
     <% end %>
     <%= will_paginate @subjects %>
-  <% if current_user? @user %>
+    <% if current_user? @user %>
+    <%= render "shared/activities" %>
   	<%= link_to "Sign out", signout_path, method: "delete" %>
   	<%= render "activate" %>
   <% end %>
