--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
-<% if signed_in? %>
-  <%= link_to "Sign out", signout_path, method: "delete" %>
-<% else %>
-  <li><%= link_to "Sign in", signin_path %></li>
-<% end %>
+
+  <h1>Users#show</h1>
+  <p>Find me in app/views/users/show.html.erb</p>
+  <% if current_user? @user %>
+  	<%= link_to "Sign out", signout_path, method: "delete" %>
+    <br>
+    <button class="btn btn-large btn-primary"> Start Course </button>
+  <% end %>
+
