--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,4 @@
+<% provide(:title, "Home") %>
 
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="navbar-inner">
-        <div class="container">
-          <%= link_to "Framgia TMS", root_path, id: "logo" %>
-        </div>
-      </div>
-    </header>
-    <div class="container">
-      <div class="center hero-unit">
-  	<h1>Welcome to Framgia TMS</h1>
-		  <h2>
-		    Please sign in to work on your course
-		  </h2>
- 			  <%= link_to "Sign in", signin_path, class: "btn btn-large btn-primary" %>
-			</div>
-    </div>
+<%= signed_in? ? (render partial: "general") : (render partial: "welcome") %>
+ 
