--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,27 @@
 <% provide(:title, "Home") %>
-
-<%= signed_in? ? (render partial: "general") : (render partial: "welcome") %>
- 
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="navbar-inner">
+    <div class="container">
+      <%= link_to "Framgia TMS", root_path, id: "logo" %>
+    </div>
+  </div>
+</header>
+ <% if signed_in? %>
+ <h1>welcome <%= current_user.courses.first.name %></h1>
+  <section>
+    <%= render "user_subject" %>
+  </section>
+  <section>
+    <%= render "review_subject" %>
+  </section>
+  <% else %>
+<div class="container">
+  <div class="center hero-unit">
+<h1>Welcome to Framgia TMS</h1>
+  <h2>
+    Please sign in to work on your course
+  </h2>
+		  <%= link_to "Sign in", signin_path, class: "btn btn-large btn-primary" %>
+	</div>
+</div>
+<% end %>
