Fix bug8768: Homepage load failed when subjects have not started - make a helper method to check start date

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -371,7 +371,7 @@ ul.milestones li {
     opacity: 1;
   }
 
-  &:last-child {
+  &:last-child, &:nth-child(6n) {
     .line-linkage {
       display: none;
     }
