improve activate enrollment funtion to follow RESTful technique, move start course button to home page

--- a/app/views/static_pages/_general_instruction.html.erb
+++ b/app/views/static_pages/_general_instruction.html.erb
@@ -2,19 +2,7 @@
 
 <h2>Course Progress</h2>
 
-<ul class="milestones">
-	<% @enrollment_subjects.each do |enrollment_subject| %>
-	<li class="<%= enrollment_subject.status %>" 
-			title="<%= get_start_date(enrollment_subject) %>">
-		<div class="milestone-name">
-			<%= link_to enrollment_subject.name, enrollment_subject %>
-		</div>
-		<div class="milestone-status"><a href="#">✓</a></div>
-		<div class="line-linkage">
-		</div>
-	</li>
-	<% end %>
-</ul>
+<%= render "activate" %>
 
 <h2>Course Introduction</h2>
 
