--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,8 +17,9 @@
 
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
-
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+      <div class="center">
+        <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+      </div>
     <% end %>
   </div>
 </div>
