--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,41 @@
-<div class="row">
-  <aside class="span4">
-    <section>
+<div class="user-info-wrap">
+  <%= image_tag "default_user.png", alt: @user.name, class: "user-avatar" %>
+  <div class="user-info">
+    <div class="user-name">
       <h1><%= @user.name %></h1>
-      <h2>
-        email: <%= @user.email %>
-        <% if current_user? @user %>
-          <%= button_to "Edit Profile", edit_user_path, method: :get, class: "btn btn-primary" %>
-        <% end %>
-      </h2>
-    </section>
-  </aside>
-</div>
-<div class="span8">
-  <% if @subjects.any? %>
-    <h3> Subjects (<%= @subjects.count %>)</h3>
-    <ul class="activities">
-      <% @subjects.each do |subject| %>
-        <li>
-          <h2><%= link_to subject.name, user_enrollment_enrollment_subject_path(@user.id, subject.enrollment_id, subject.id) %></h2>
-          <p> Started at: <%= subject.start_date %> ,
-            <%= subject.enrollment_tasks.where(status: "done").count %> /
-            <%= subject.enrollment_tasks.count %> tasks done
-            <%= subject.status %> 
-          </p>
-        </li>
+      <% if current_user? @user %>
+      <%= button_to "Edit Profile", edit_user_path, method: :get,
+      class: "btn btn-primary small" %>
       <% end %>
-    </ul>
-    <% end %>
-    <%= will_paginate @subjects %>
-    <% if current_user? @user %>
-    <%= render "shared/activities" %>
-  <% end %>
+    </div>
+    <div class="user-desc"> <%= @user.email %> </div>
+  </div>
 </div>
+<div class="span7 subject-list">
+  <% if @subjects.any? %>
+  <h2> Subjects (<%= @subjects.count %>)</h2>
+  <ul>
+    <% @subjects.each do |subject| %>
+    <li>
+      <h3 class="subject-name"><%= link_to subject.name, user_enrollment_enrollment_subject_path(@user.id,
+        subject.enrollment_id, subject.id) %></h3>
+        <p> <%= get_start_date subject %>,
+          <b><%= subject.enrollment_tasks.done_status.count %> /
+            <%= subject.enrollment_tasks.count %></b> tasks done
+          </p>
+          <div class="subject-status <%= subject.status %>"><%= subject.status %>
+          </div>
+        </li>
+        <% end %>
+      </ul>
+      <% end %>
+    </div>
+    <div class="span1">
+    </div>
+    <div class="span4">
+      <h2>Activity log</h2>
+      <% if current_user? @user %>
+        <%= render "shared/activities" %>
+        <%= will_paginate @activities %>
+      <% end %>
+    </div>
