--- a/app/views/static_pages/_general_instruction.html.erb
+++ b/app/views/static_pages/_general_instruction.html.erb
@@ -2,6 +2,20 @@
 
 <h2>Course Progress</h2>
 
+<ul class="milestones">
+			<% @enrollment_subjects.each do |enrollment_subject| %>
+			<li class="<%= enrollment_subject.status %>" 
+					title="<%= enrollment_subject.subject.duration.to_s + " days" %>">
+				<div class="milestone-name">
+					<%= enrollment_subject.subject.name %>
+				</div>
+				<div class="milestone-status"></div>
+				<div class="line-linkage">
+				</div>
+			</li>
+			<% end %>
+		</ul>	
+
 <%= render "activate" %>
 
 <h2>Course Introduction</h2>
