--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,23 +12,23 @@
   </aside>
 </div>
 <div class="span8">
-  <% if @subjects.any? %>
-    <h3> Subjects (<%= @subjects.count %>)</h3>
+  <% if @enrollment_subjects.any? %>
+    <h3> Subjects (<%= @enrollment_subjects.count %>)</h3>
     <ul class="activities">
-      <% @subjects.each do |subject| %>
+      <% @enrollment_subjects.each do |enrollment_subject| %>
         <li>
-          <h2><%= link_to subject.name, user_enrollment_enrollment_subject_path(@user.id, subject.enrollment_id, subject.id) %></h2>
-          <p> Started at: <%= subject.start_date %> ,
-            <%= subject.enrollment_tasks.where(status: "done").count %> /
-            <%= subject.enrollment_tasks.count %> tasks done
-            <%= subject.status %> 
-          </p>
+          <h2><%= enrollment_subject.subject.name %></h2>
+          <ul> 
+            <li>Duration: <%= enrollment_subject.subject.duration.to_s + " days" %></li>
+            <li>Expect start date:<%= enrollment_subject.start_date %></li>
+            <li><%= enrollment_subject.enrollment_tasks.where(status: "done").count %> /
+            <%= enrollment_subject.enrollment_tasks.count %> tasks done</li>
+            <li>Status: <%= enrollment_subject.status %> </li>
+          </ul>
         </li>
       <% end %>
     </ul>
     <% end %>
-    <%= will_paginate @subjects %>
     <% if current_user? @user %>
-    <%= render "shared/activities" %>
   <% end %>
 </div>
