--- a/app/views/static_pages/_activate.html.erb
+++ b/app/views/static_pages/_activate.html.erb
@@ -1,7 +1,6 @@
-<% if @enrollment %>
-  <% unless enrollment_activation? @enrollment %>
-    <% @intro_toggle_btn_value = "Hide" %>
-  	<% @intro_display = "block" %>
-  	<%= button_to "Start Course", user_enrollment_path(current_user.id,@enrollment.id), method: :patch, class: "btn btn-large btn-primary" %>
-  <% end %>
+<% unless @enrollment.blank? || @enrollment.activated? %>
+  <% @intro_toggle_btn_value = "Hide" %>
+	<% @intro_display = "block" %>
+	<%= button_to "Start Course", activate_path(current_user.id, @enrollment.id,"activate"), 
+		method: :patch, class: "btn btn-large btn-primary" %>
 <% end %>
