--- a/app/views/enrollment_subjects/show.html.erb
+++ b/app/views/enrollment_subjects/show.html.erb
@@ -2,19 +2,7 @@
 <%= render "shared/error_messages" %>
 <% if current_user? @user %>
   <h2>Subject progress</h2>
-  <ul class="tasks">
-    <% @enrollment_subject.enrollment_tasks.each do |enrollment_task| %>
-      <li class="<%= enrollment_task.status %>">
-        <div class="task-name"><%= enrollment_task.task.name %></div>
-        <div class="line-linkage"></div>
-      </li>
-    <% end %>
-  </ul>
-
-  <div class="center">
-    <%= link_to "Subject Report", user_enrollment_task_list_path,
-    class: "btn btn-large btn-primary" %>
-  </div>
+  <%= render "task_list" %>
 
   <h2>Basic information</h2>
   <p>Subject <%= get_start_date(@enrollment_subject) %></p>
