--- a/app/views/enrollment_subjects/show.html.erb
+++ b/app/views/enrollment_subjects/show.html.erb
@@ -1,4 +1,3 @@
-<h1><%= @enrollment_subject.subject.name %></h1>
 <%= render "shared/error_messages" %>
 <% if current_user? @user %>
   <h2>Subject progress</h2>
@@ -9,7 +8,12 @@
 
   <h2>Instruction </h2>
   <p><%= @subject.description %></p>
-
+	<% if @enrollment_subject.done? %>
+    <strong>You have completed this subject</strong>
+	<% else %>
+		<%= button_to "Finish Subject", user_enrollment_enrollment_subject_path, 
+      method: :patch, class: "btn btn-large btn-primary" %>
+	<% end %>
   <h2>Activity log</h2>
   <%= render "shared/activities" %>
 <% end %>
