--- a/app/views/enrollment_subjects/show.html.erb
+++ b/app/views/enrollment_subjects/show.html.erb
@@ -1,19 +1,20 @@
+<h1><%= @subject.name %></h1>
 <%= render "shared/error_messages" %>
 <% if current_user? @user %>
   <h2>Subject progress</h2>
   <%= render "task_list" %>
-
   <h2>Basic information</h2>
   <p>Subject <%= get_start_date(@enrollment_subject) %></p>
-
   <h2>Instruction </h2>
   <p><%= @subject.description %></p>
-	<% if @enrollment_subject.done? %>
-    <strong>You have completed this subject</strong>
-	<% else %>
-		<%= button_to "Finish Subject", user_enrollment_enrollment_subject_path, 
-      method: :patch, class: "btn btn-large btn-primary" %>
-	<% end %>
+  <div class="center">
+  	<% if @enrollment_subject.done? %>
+      <strong>You have completed this subject</strong>
+  	<% else %>
+  		<%= button_to "Finish Subject", user_enrollment_enrollment_subject_path, 
+        method: :patch, class: "btn btn-large btn-primary" %>
+  	<% end %>
+  </div>
   <h2>Activity log</h2>
   <%= render "shared/activities" %>
 <% end %>
