--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -24,14 +24,21 @@
   <span id="intro_toggle_btn" class="btn btn-primary small">Hide</span>
 </h2>
 <div id="intro">
-  <p>All data in this page is hard-coded, and will be filled with dynamic data later.</p>
-
-  <p>Welcome to the Ruby on Rails Tutorial. The goal of this book is to be the best answer to the question, “If I want to learn web development with Ruby on Rails, where should I start?” By the time you finish the Ruby on Rails Tutorial, you will have all the skills you need to develop and deploy your own custom web applications with Rails. You will also be ready to benefit from the many more advanced books, blogs, and screencasts that are part of the thriving Rails educational ecosystem. Finally, since the Ruby on Rails Tutorial uses Rails 4, the knowledge you gain here represents the state of the art in web development. (The most up-to-date version of the Ruby on Rails Tutorial can be found on the book’s website at http://railstutorial.org/; if you are reading this book offline, be sure to check the online version of the Rails Tutorial book at http://railstutorial.org/book for the latest updates.)</p>
-
-  <p>(Note: The present volume is the Rails 4.0 version of the book, which means that it has been revised to be compatible with Rails 4.0, but it is not yet a new edition because the changes in Rails don’t yet justify it. From the perspective of an introductory tutorial, the differences between Rails 4.0 and the previous version, Rails 3.2, are slight. Indeed, although there are a large number of miscellaneous small changes (Box 1.1), for our purposes there is only one significant difference, a new security technique called strong parameters, covered in Section 7.3.2. Once the changes in Rails justify the effort, I plan to prepare a full new edition of the Rails Tutorial, including coverage of topics such as Turbolinks and Russian doll caching, as well as some new aspects of RSpec, such as feature specs.)</p>
+  <% I18n.locale = :vi %>
+  <%= t "course_intro.text_html", trainee: current_user.name,
+    doc_link: t("course_intro.doc_link"), 
+    duration: (distance_of_time_in_words(current_course.start_date, 
+      current_course.end_date)), 
+    start_date: l(current_course.start_date),
+    end_date: l(current_course.end_date), 
+    test_date: l(current_course.end_date + 1.day) %>
 </div>
+<h2>Trainees</h2>
+<%= render "shared/show_user" %>
 <h2>Activity log</h2>
-  <%= render "shared/activities" %>
+<%= render "shared/activities" %>
+<%= will_paginate @activities %>
+
 <script>
   $(function(){
     if (<%= @enrollment.activated? %>)
