Finish signin/out, edit profile page for Supervisor

--- a/app/views/static_pages/_welcome.html.erb
+++ b/app/views/static_pages/_welcome.html.erb
@@ -1,8 +1,5 @@
 <h1 class="home-welcome">Welcome to Framgia Vietnam</h1>
 <p>To become official staff of the company, you must be trained through a challenging course.</p>
-<p>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-</p>
-<p>Looks like I've talked too much. This page has done its job. 
-	Please <%= link_to "sign in", signin_path %>.</p>
-	<p>Best regards.</p>
+<p>If you are a trainee, please <%= link_to "sign in", signin_path %> here.</p>
+<p>If you are a supervisor, please <%= link_to "sign in", admin_signin_path %> here.</p>
+<p>Best regards.</p>
