--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,20 @@
               <li><%= link_to "Profile", current_user %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "Sign out", signout_path, method: "delete" %>
+                <%= link_to "Sign out", signout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+          <% elsif supervisor_signed_in? %>
+          <li id="" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Welcome, <i> <%= current_supervisor.name %> </i> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", admin_supervisor_path(current_supervisor.id) %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Sign out", admin_signout_path, method: :delete %>
               </li>
             </ul>
           </li>
