--- a/app/views/shared/_show_user.html.erb
+++ b/app/views/shared/_show_user.html.erb
@@ -1,7 +1,7 @@
-<ul class="users">
+<ul class="users-aside">
   <% @course.users.each do |user| %>
     <li>
-      <%= gravatar_for user, size: 52 %>
+      <%= gravatar_for user, size: 30 %>
       <%= link_to user.name, user %>
     </li>
   <% end %>
